# doseffects

./: CMakeLists.txt  README.md  bump.h  bumpmain.c  bumpmain.h  bumpobj.c  bumpobj.h  bumptri.c  bumptri.h  clock.c  envmaps.c  envmaps.h  flag3d.c  flag3d.h  fontnew.c  fontnew.h  gfx.c  gfx.h  low.c  low.h  main.c  makefile.wc  math3d.c  math3d.h  matrix.c  matrix.h  object3d.c  object3d.h  pcx.c  pcx.h  polygon.c  polygon.h  raytrace.c  raytrace.h  scroll.c  scroll.h  sphere.c  sphere.h  triangle.c  triangle.h  (+1 more)
dummy/: CMakeLists.txt  clock.c  low.c
